# Rosbotje1

./: .gitignore  ROS2-3D_Slam(humble)常用指令.txt  frames.gv
data/LEGO-LOAM/: cornerMap.pcd  finalCloud.pcd  surfaceMap.pcd  trajectory.pcd
data/cartographer/: carto_map.pcd  carto_map_points.ply  map.pb  map.pbfile
data/cartographer/carto_map/: metadata.yaml
my_rosbotje_rt/: package.xml  setup.cfg  setup.py
my_rosbotje_rt/my_rosbotje_rt/: my_map_server.py
simple_follower_ros2/simple_follower_ros2/: laserTracker.py
test_rt_package/: CMakeLists.txt  package.xml  setup.py
test_rt_package/launch/: minimal_map_launch.py  static_map_launch.py
test_rt_package/map/: WHEELTEC.pgm  WHEELTEC.yaml
test_rt_package/test_rt_package/: static_map_publisher.py
turn_on_wheeltec_robot/config/: ekf-19jan.yaml  ekf.yaml  ekf_carto.yaml  laser_filter-old.yaml  laser_filter.yaml  laser_filter_goed.yaml  robot_model.yaml  wheeltec_param.yaml
turn_on_wheeltec_robot/launch/: base_serial.launch.py  base_serial.launch19jan.py  robot_mode_description.launch.py  robot_mode_description.launch_test.py  turn_on_wheeltec_robot.launch.py  wheeltec_camera.launch.py  wheeltec_ekf.launch.py  wheeltec_lidar.launch.py  wheeltec_lidar.launch19jan.py
turn_on_wheeltec_robot/src/: wheeltec_robot.cpp
wheeltec_path_follow/path/: wheeltec_path
wheeltec_robot_nav2/: frames.gv
wheeltec_robot_nav2/launch/: bringup_launch.py  wheeltec_nav2.launch.py
wheeltec_robot_nav2/map/: WHEELTEC.pgm  WHEELTEC.pgm.old  WHEELTEC.yaml  WHEELTEC.yaml.old  WHEELTEC_RTBA.pgm
wheeltec_robot_rrt2/config/: ekf.yaml
wheeltec_robot_rtab/launch/: wheeltec_nav2_rtab_pure3d.launch.py
(+44 files in other folders)
