<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_rosbotje_rt</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wheeltec@todo.todo">wheeltec</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
    <!-- Runtime dependencies (nodes die je launchfile gebruikt) -->
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
